// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders using theme, given toggle value false 1`] = `
<View
  accessibilityHint="Toggle test"
  accessibilityLabel="Test toggle"
  accessibilityRole="switch"
  accessibilityState={
    {
      "busy": false,
      "checked": false,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": "Off",
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 10,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#F59E0B",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 2,
        "width": 40,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#F0F0F0",
          "borderRadius": 10,
          "elevation": 5,
          "height": 20,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3.84,
          "transform": [
            {
              "translateX": 1,
            },
          ],
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Toggle renders using theme, given toggle value true 1`] = `
<View
  accessibilityHint="Toggle test"
  accessibilityLabel="Test toggle"
  accessibilityRole="switch"
  accessibilityState={
    {
      "busy": false,
      "checked": true,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": "On",
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 10,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#10B981",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 2,
        "width": 40,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#F0F0F0",
          "borderRadius": 10,
          "elevation": 5,
          "height": 20,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3.84,
          "transform": [
            {
              "translateX": 16,
            },
          ],
          "width": 20,
        }
      }
    />
  </View>
</View>
`;
